log
do.,  8 de may. de 2022 16:17:26: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
38d038e
do.,  8 de may. de 2022 16:18:05: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ef74298
do.,  8 de may. de 2022 16:18:29: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
6f2c977
do.,  8 de may. de 2022 16:21:00: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:24: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
    return pq->heapArray[0];
           ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6153baf
do.,  8 de may. de 2022 16:21:35: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:27: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return pq->heapArray[0].priority;
           ~~~~~~~~~~~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
68df576
do.,  8 de may. de 2022 16:22:13: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c686062
do.,  8 de may. de 2022 16:23:03: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
93497c2
do.,  8 de may. de 2022 16:24:01: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
108b650
do.,  8 de may. de 2022 16:54:42: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:26: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0)return NULL;
                          ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
heap.c:29:62: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
    if(pq->size+1>=pq->capac)pq->heapArray=(heapElem*)realloc(sizeof(heapElem),pq->capac*2);
                                                              ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'unsigned int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b48f1b1
do.,  8 de may. de 2022 16:55:21: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:26: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0)return NULL;
                          ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
heap.c:29:62: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
    if(pq->size+1>=pq->capac)pq->heapArray=(heapElem*)realloc(pq->capac*2,sizeof(heapElem));
                                                              ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
15c35f3
do.,  8 de may. de 2022 16:56:23: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:26: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0)return NULL;
                          ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
heap.c:29:78: error: invalid operands to binary * (have 'void *' and 'int')
    if(pq->size+1>=pq->capac)pq->heapArray=(heapElem*)realloc((void*)pq->capac*2,sizeof(heapElem));
                                                              ~~~~~~~~~~~~~~~~^
cc1.exe: all warnings being treated as errors
Compilation failed
8dde6f8
do.,  8 de may. de 2022 20:50:52: 
 heap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:26: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0)return NULL;
                          ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
heap.c:38:17: error: 'return' with a value, in function returning void [-Werror]
          return NULL;
                 ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
968b413
do.,  8 de may. de 2022 21:03:00: 
 heap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:29:26: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0)return NULL;
                          ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
heap.c:38:17: error: 'return' with a value, in function returning void [-Werror]
          return NULL;
                 ^~~~
heap.c:27:6: note: declared here
 void heap_push(Heap* pq, void* data, int priority){
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
30aca49
do.,  8 de may. de 2022 21:03:38: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
6669f85
do.,  8 de may. de 2022 21:05:03: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
f5b2e01
do.,  8 de may. de 2022 21:06:41: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
26736ed
do.,  8 de may. de 2022 21:09:21: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|0
dff63ab
